# lms_temp

./: .env  Dockerfile  pyproject.toml
core/: settings.py  urls.py
core/authentication/: firebase.py
core/institution/: admin.py  models.py
core/users/: admin.py  apps.py  models.py  signals.py
core/users/management/commands/: setup_roles.py
core/users/permissions/: user_institute_permission.py
core/users/services/: firebase_service.py  user_service.py
core/users/signals/: __init__.py  user_signal.py
core/users/signals/permission_signals/: user_institute_signal.py
credentials/: creds.json
